--- a/HomeManager/View/ToDo/ucTodoBijlage.xaml
+++ b/HomeManager/View/ToDo/ucTodoBijlage.xaml
@@ -87,7 +87,7 @@
                         Height="30"
                         Margin="0,0,10,0"
                         HorizontalAlignment="Left"
-                        Style="{StaticResource UploadButton}" />
+                        Command="{Binding cmdUploadFile}" Style="{StaticResource UploadButton}" />
                     <Button
                         Width="30"
                         Height="30"
