--- a/HomeManager/View/ToDo/ucTodoBijlage.xaml
+++ b/HomeManager/View/ToDo/ucTodoBijlage.xaml
@@ -84,6 +84,7 @@
                     Grid.Column="3"
                     Orientation="Horizontal">
                     <Button
+                        x:Name="UploadFilebtn"
                         Width="30"
                         Height="30"
                         Margin="0,0,10,0"
@@ -98,7 +99,8 @@
                         Height="30"
                         Margin="0,0,0,0"
                         HorizontalAlignment="Left"
-                        Style="{StaticResource EyeButton}" />
+                        Style="{StaticResource EyeButton}"
+                        Command="{Binding cmdViewFile}"/>
                 </StackPanel>
 
                 <Label
