--- a/HomeManager/View/ToDo/ucTodoBijlage.xaml
+++ b/HomeManager/View/ToDo/ucTodoBijlage.xaml
@@ -9,7 +9,8 @@
     d:DesignHeight="300"
     d:DesignWidth="800"
     Background="{StaticResource myBackground}"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    AllowDrop="True">
 
     <Grid DataContext="{Binding Source={StaticResource VML}, Path=TodoBijlageViewModel}">
         <Grid.RowDefinitions>
@@ -85,6 +86,7 @@
                     Orientation="Horizontal">
                     <Button
                         x:Name="UploadFilebtn"
+                        ToolTip="Upload File"
                         Width="30"
                         Height="30"
                         Margin="0,0,10,0"
@@ -95,6 +97,8 @@
                         Drop="Button_Drop"
                         Style="{StaticResource UploadButton}" />
                     <Button
+                        x:Name="ViewFilebtn"
+                        ToolTip="File bekijken"
                         Width="30"
                         Height="30"
                         Margin="0,0,0,0"
