--- a/HomeManager/View/ToDo/ucTodoPopup.xaml
+++ b/HomeManager/View/ToDo/ucTodoPopup.xaml
@@ -175,9 +175,7 @@
                         ItemsSource="{Binding MijnCollectie}"
                         SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.TodoCollectieID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                         SelectedValuePath="ToDoCollectieID" />
-                    <Button
-                        Style="{StaticResource OpenUCButton}"
-                        Command="{Binding OpenCollectiesCommand}" />
+                    <Button Command="{Binding OpenCollectiesCommand}" Style="{StaticResource OpenUCButton}" />
 
                 </StackPanel>
 
